feat: 타임리프 sec 태그 추가

--- a/module-admin/src/main/resources/templates/common/login.html
+++ b/module-admin/src/main/resources/templates/common/login.html
@@ -3,12 +3,6 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <title> 관리자 로그인 </title>
-
-    <!--[if lt IE 10]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -75,29 +69,15 @@
                                     <h3 class="text-center">로그인</h3>
                                 </div>
                             </div>
-                            <p th:if="${error}" class="text-muted text-center p-b-5" th:text="${exceptionMessage}">exceptionMessage</p>
+                            <p th:if="${failureMessage != null}" class="text-muted text-center p-b-5" style="color:red;" th:text="${failureMessage}">failureMessage</p>
                             <div class="form-group form-primary">
-                                <input type="text" name="username" id="username" class="form-control form-control-round" required="" >
+                                <input type="text" name="username" id="username" class="form-control form-control-round" required="" autofocus autocomplete="false">
                                 <span class="form-bar"></span>
                             </div>
                             <div class="form-group form-primary">
                                 <input type="password" name="password" id="password" class="form-control form-control-round" required="" >
                                 <span class="form-bar"></span>
                             </div>
-                            <!--<div class="row m-t-25 text-left">
-                                <div class="col-12">
-                                    <div class="checkbox-fade fade-in-primary d-">
-                                        <label>
-                                            <input type="checkbox" value="">
-                                            <span class="cr"><i class="cr-icon icofont icofont-ui-check txt-primary"></i></span>
-                                            <span class="text-inverse">Remember me</span>
-                                        </label>
-                                    </div>
-                                    <div class="forgot-phone text-right f-right">
-                                        <a href="auth-reset-password.html" class="text-right f-w-600"> Forgot Password?</a>
-                                    </div>
-                                </div>
-                            </div>-->
                             <div class="row m-t-30">
                                 <div class="col-md-12">
                                     <div class="d-grid">
@@ -106,15 +86,6 @@
                                 </div>
                             </div>
                             <hr/>
-                           <!-- <div class="row">
-                                <div class="col-md-10">
-                                    <p class="text-inverse text-left m-b-0">Thank you.</p>
-                                    <p class="text-inverse text-left"><a href="../index.html"><b class="f-w-600">Back to website</b></a></p>
-                                </div>
-                                <div class="col-md-2">
-                                    <img src="../files/assets/images/auth/Logo-small-bottom.png" alt="small-logo.png">
-                                </div>
-                            </div>-->
                         </div>
                     </div>
                 </form>
@@ -122,46 +93,6 @@
         </div>
     </div>
 </section>
-
-<!--<div class="ie-warning">
-    <h1>Warning!!</h1>
-    <p>You are using an outdated version of Internet Explorer, please upgrade <br/>to any of the following web browsers to access this website.</p>
-    <div class="iew-container">
-        <ul class="iew-download">
-            <li>
-                <a href="http://www.google.com/chrome/">
-                    <img src="../files/assets/images/browser/chrome.png" alt="Chrome">
-                    <div>Chrome</div>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.mozilla.org/en-US/firefox/new/">
-                    <img src="../files/assets/images/browser/firefox.png" alt="Firefox">
-                    <div>Firefox</div>
-                </a>
-            </li>
-            <li>
-                <a href="http://www.opera.com">
-                    <img src="../files/assets/images/browser/opera.png" alt="Opera">
-                    <div>Opera</div>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.apple.com/safari/">
-                    <img src="../files/assets/images/browser/safari.png" alt="Safari">
-                    <div>Safari</div>
-                </a>
-            </li>
-            <li>
-                <a href="http://windows.microsoft.com/en-us/internet-explorer/download-ie">
-                    <img src="../files/assets/images/browser/ie.png" alt="">
-                    <div>IE (9 & above)</div>
-                </a>
-            </li>
-        </ul>
-    </div>
-    <p>Sorry for the inconvenience!</p>
-</div>-->
 
 <script type="text/javascript" th:src="@{/files/bower_components/jquery/dist/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/files/bower_components/jquery-ui/jquery-ui.min.js}"></script>
@@ -176,11 +107,10 @@
 <script type="text/javascript" th:src="@{/files/bower_components/jquery-i18next/jquery-i18next.min.js}"></script>
 <script type="text/javascript" th:src="@{/files/assets/js/common-pages.js}"></script>
 
-<script>
+<script th:inline="javascript">
     $(function(){
-     /*   $('#username').focus();
         $('#username').val('email1@email.com');
-        $('#password').val('1qaz2wsx!@');*/
+        $('#password').val('1qaz2wsx!@');
     })
 </script>
 
