design: 에러페이지 logo 이미지 추가

--- a/module-admin/src/main/resources/templates/error/404.html
+++ b/module-admin/src/main/resources/templates/error/404.html
@@ -12,7 +12,7 @@
 <body>
 
 <a href="#" class="logo-link" title="back home">
-    <img src="img/logo.png" class="logo" alt="Company's logo">
+    <img class="logo" src="/css/images/logo.png" alt="Theme-Logo">
 </a>
 <div class="content">
     <div class="content-box">
