design: 404 이미지 추가

--- a/module-admin/src/main/resources/templates/error/404.html
+++ b/module-admin/src/main/resources/templates/error/404.html
@@ -16,9 +16,9 @@
 </a>
 <div class="content">
     <div class="content-box">
-        <div class="big-content">
-
-            <div class="list-square">
+        <div class="big-content" style="width:auto; min-height:10px;">
+            <img src="/css/images/404image.png" alt="404" style="max-width:100%; height:auto;">
+            <!--<div class="list-square">
                 <span class="square"></span>
                 <span class="square"></span>
                 <span class="square"></span>
@@ -33,24 +33,22 @@
                 <span class="line"></span>
             </div>
 
-            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-search" aria-hidden="true"></i>-->
 
             <div class="clear"></div>
         </div>
 
-        <h1>Oops! Error 404 not found.</h1>
-        <p>The page you were looking for doesn't exist.<br>
-            We think the page may have moved.</p>
+        <h1>죄송합니다. 요청하신 페이지를 찾을 수 없어요.</h1>
+        <p>입력하신 주소가 정확한지 다시 한번 확인해주세요.</p>
     </div>
 </div>
-<footer class="light">
+<!--<footer class="light">
     <ul>
         <li><a href="#">Support</a></li>
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
     </ul>
-</footer>
-
+</footer>-->
 
 <script type="text/javascript" src="/files/bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/files/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
