--- a/module-admin/src/main/resources/templates/sendHistory/sendHistoryList.html
+++ b/module-admin/src/main/resources/templates/sendHistory/sendHistoryList.html
@@ -21,13 +21,20 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-6 mb-3">
                                 <div class="mb-0 form-group row">
-                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>발송수단</strong>
-                                    </div>
-                                    <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-select-sm form-control-sm form-control-round custom-select">
-                                            <option value="">- 전체 -</option>
-                                            <option th:each="item : ${searchSendMethod}" th:value="${item.key}" th:text="${item.value}">value</option>
+                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>키워드</strong></div>
+                                    <div class="input-group input-group-sm input-group-dropdown mb-0">
+                                        <select class="form-select form-control form-control-round custom-select">
+                                            <option value="opt1">primary</option>
+                                            <option value="opt2">Type 2</option>
+                                            <option value="opt3">Type 3</option>
+                                            <option value="opt4">Type 4</option>
+                                            <option value="opt5">Type 5</option>
+                                            <option value="opt6">Type 6</option>
+                                            <option value="opt7">Type 7</option>
+                                            <option value="opt8">Type 8</option>
                                         </select>
+                                        <input type="text" class="form-control form-control-round" aria-label="Text input with dropdown button" name="filterKeywordInput"
+                                               id="filterKeywordInput"/>
                                     </div>
                                 </div>
                             </div>
@@ -36,7 +43,7 @@
                                     <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>발송유형</strong>
                                     </div>
                                     <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-select-sm form-control-sm form-control-round custom-select">
+                                        <select name="filterStatusSelect" class="form-select form-control form-control-round custom-select">
                                             <option value="">- 전체 -</option>
                                             <option th:each="item : ${searchSendCategory}" th:value="${item.key}" th:text="${item.value}">value</option>
                                         </select>
@@ -47,20 +54,17 @@
                                 <div class="mb-0 form-group row">
                                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="searchTitle"><strong>제목</strong></label>
                                     <div class="col-12">
-                                        <input type="text" class="form-select form-select-sm form-control-sm form-control-round" aria-label="Text input with dropdown button" name="searchTitle" id="searchTitle"/>
+                                        <input type="text" class="form-control form-control-round" aria-label="Text input with dropdown button" name="searchTitle" id="searchTitle"/>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 mb-3">
                                 <div class="mb-0 form-group row">
-                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>사용여부</strong>
-                                    </div>
+                                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="searchPeriod"><strong>발송일</strong></label>
                                     <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-select-sm form-control-sm form-control-round custom-select">
-                                            <option value="">- 전체 -</option>
-                                            <option value="Y">사용</option>
-                                            <option value="N">사용안함</option>
-                                        </select>
+                                        <input type="text"  class="form-control form-control-round" aria-label="Text input with dropdown button" value="" name="searchPeriod" id="searchPeriod" autocomplete="off">
+                                        <input type="hidden" id="searchBgngDt"name="searchBgngDt" >
+                                        <input type="hidden" id="searchEndDt"name="searchEndDt" >
                                     </div>
                                 </div>
                             </div>
@@ -124,6 +128,11 @@
 
     <script type="text/javascript" th:src="@{/js/ckeditor/build/ckeditor.js}"></script>
     <script type="text/javascript" th:src="@{/js/ckeditor/build/UploadAdapter.js}"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
     <script th:inline="javascript">
         const listController = {
 
@@ -254,6 +263,8 @@
         };
 
         $(function () {
+            initDateRangePicker("searchPeriod", "searchBgngDt", "searchEndDt");
+
             listController.init();
 
             $("body").on('click', '#insertBtn', function () {
