design: 예제용 탭 화면 추가. 두 가지 형태 중 선택 필요

--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -84,6 +84,10 @@ strong {
     background : #ff8031;
 }
 
+.border-checkbox-section .border-checkbox-group-inverse .border-checkbox-label:before{
+    border: 2px solid #ff8031;
+}
+
 .btn-primary:hover {
     background-color: #FF6200 !important;
     border-color: #FF6200 !important;
