--- a/module-admin/src/main/resources/templates/tabExample.html
+++ b/module-admin/src/main/resources/templates/tabExample.html
@@ -5,7 +5,7 @@
 
 <div layout:fragment="content">
     <div class="page-body">
-        <div class="nav-main">
+        <div class="card-header p-b-0 nav-main">
             <ul class="nav nav-tabs md-tabs" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="tab" href="#home3" role="tab" aria-selected="false">Home</a>
@@ -28,7 +28,6 @@
 
         <div class="row">
                 <div class="col-sm-12">
-
                     <div class="card">
                         <div class="card-block">
                             <div class="row m-b-30">
