--- a/module-admin/src/main/resources/templates/inquiry/inquiryList.html
+++ b/module-admin/src/main/resources/templates/inquiry/inquiryList.html
@@ -10,7 +10,7 @@
         }
     </style>
 <!--    <script type="text/javascript" th:src="@{/js/common/common.js}"></script>-->
-    <script>
+    <script th:inline="javascript">
         const inquiryList = {
             InquiryData: null,
             AnswerData : null,
@@ -58,7 +58,7 @@
                     type: "post",
                     async: false,
                     enctype: 'multipart/form-data',
-                    url: "/inquiry/getFilterData.do",
+                    url: "/admin/inquiry/getFilterData.do",
                     ContentType: 'application/json',
                     dataType: 'json',
                     cache: false,
@@ -95,7 +95,7 @@
                     type: "post",
                     async: false,
                     enctype: 'multipart/form-data',
-                    url: "/inquiry/getInquiryList.do",
+                    url: "/admin/inquiry/getInquiryList.do",
                     dataType: 'json',
                     data: params,
                     cache: false,
@@ -196,7 +196,7 @@
                     type: "post",
                     async: false,
                     enctype: 'multipart/form-data',
-                    url: "/inquiry/getAnswerById.do",
+                    url: "/admin/inquiry/getAnswerById.do",
                     dataType: 'json',
                     data: JSON.stringify(targetId), // 객체를 JSON 문자열로 변환하여 전달
                     contentType: 'application/json', // 전달하는 데이터의 타입을 명시
@@ -260,7 +260,7 @@
                     type: "post",
                     async: false,
                     enctype: 'multipart/form-data',
-                    url: "/inquiry/insertAnswer.do",
+                    url: "/admin/inquiry/insertAnswer.do",
                     dataType: 'json',
                     data: JSON.stringify(param), // 객체를 JSON 문자열로 변환하여 전달
                     contentType: 'application/json', // 전달하는 데이터의 타입을 명시
@@ -296,7 +296,9 @@
         }
         $(document).ready(function () {
             inquiryList.init();
-        })
+        });
+
+        const loginSession = [[${loginSession}]]
     </script>
 
     <!-- Page-body start -->
@@ -505,7 +507,7 @@
                                         <input type="hidden" name="answerManagerId" id="answerManagerId" value="1"
                                                placeholder="Text Input Validation" readonly/>
                                         <input type="text" class="form-control form-control-round"
-                                               name="answerManager" id="answerManager" value="이동헌"
+                                               name="answerManager" id="answerManager" value=""
                                                placeholder="Text Input Validation" readonly/>
                                     </div>
                                 </div>
