--- a/module-admin/src/main/resources/templates/faq/view.html
+++ b/module-admin/src/main/resources/templates/faq/view.html
@@ -165,7 +165,11 @@
                                 return `<input type="checkbox" data-id="${row.id}" name="tableCheckbox">`;
                             }
                         },
-                        {data: 'category'},
+                        {
+                            render: function (data, type, row) {
+                                return `${row.category.value}`;
+                            }
+                        },
                         {data: 'title'},
                         {
                             render: function (data, type, row) {
